added the breakpoints for media queries of small and extra small screen sizes but stil working on medium screen sizes

--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,128 +9,178 @@
     <script src="https://kit.fontawesome.com/db547d565f.js" crossorigin="anonymous"></script>
     <title> Ladi Maji Group </title>
 </head>
+
 <body>
-    <div class="circle-1"> </div>
-    <div class="circle-2"> </div>
-    <div class="circle-3"> </div>
-   
+    <div class="circle-theory">
+        <div class="circle-1"> </div>
+        <div class="circle-2"> </div>
+        <div class="circle-3"> </div>
+    </div>
     <header>
         <div class="logo"></div>
-        <h3 class="Name">Ladi Maji Foundation</h3>  
+        <h3 class="Name">Ladi Maji Foundation</h3>
         <div class="burger">
-        <i class="fas fa-hamburger burger-open"></i>
-        <!-- <i class="fas fa-times burger-close fa-spin"></i> -->
-    </div>
+            <i class="fas fa-hamburger burger-open"></i>
+        </div>
     </header>
-   <!-- <span>We care</span> -->
-        <nav>
-           <ul>
-           <li class="nav-item active"> <a class="nav-link" href="#"><i class="fas fa-home"></i> <span>Home</span></a></li>
-           <li class="nav-item"> <a class="nav-link" href="./Aboutus.html"><i class="fas fa-fingerprint"></i> <span>About us</span></a></li>
-           <li class="nav-item"> <a class="nav-link" href="./Contactus.html"><i class="fas fa-headset"></i><span> Contact us</span></a></li>
-           <li class="nav-item"> <a class="nav-link" href="./Partner.html"><i class="fas fa-handshake"></i><span> Partner</span></a></li>
-           </ul>
-        </nav>
-<!--   
-    <svg class="clipped">
-        <defs>
-            <clipPath id="clipPath">
-              <circle class="one" cx="200" cy="200" r="200" />
-            </clipPath>
-        </defs>
-    </svg> -->
 
-        <section class="d-catch">
-        <div class="care">We Care</div>
-        <button class="Partner-Us">  
-           <i class="fas fa-handshake"></i><span class="partner-text"> Partner</span>
-        </button>
-        </section>
- <main>
+    <nav>
+        <ul>
+            <li class="nav-item active"> <a class="nav-link" href="#"><span><i class="fas fa-home"></i> Home</span></a>
+            </li>
+            <li class="nav-item"> <a class="nav-link" href="./Aboutus.html"><span><i class="fas fa-fingerprint"></i>
+                        About us</span></a></li>
+            <li class="nav-item"> <a class="nav-link" href="./Contactus.html"><span><i class="fas fa-headset"></i>
+                        Contact us</span></a></li>
+            <li class="nav-item"> <a class="nav-link" href="./Partner.html"><span><i class="fas fa-handshake"></i>
+                        Partner</span></a></li>
+        </ul>
+    </nav>
+
+    <section class="d-catch">
+        <div class="landingSection">
+            <img class="landingImage" src="./Assets/LadiMajiProject.jpg" alt="Catchy-Img" />
+            <div class="backgroundCover"></div>
+        </div>
+        <div class="text-upon">
+            <span class="catchy-text"></span>
+            <div class="care"> </span> We Care</div>
+            <button class="Partner-Us">
+                <i class="fas fa-handshake"></i><span class="partner-text"> Partner</span>
+            </button>
+        </div>
+    </section>
+    <main>
         <section class="section section-1">
-            <img src="./Assets/LadiMajiProject.jpg" alt="Catchy-Img"/>
-           <div class="Vision-Mission">
-               <h4 class="heading-1">Vision Statement</h4>
-             <div id="vision-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quae eaque tempore perferendis non enim facere consequuntur numquam saepe labore, consequatur ex voluptatum accusamus ab unde. Rem ipsum aut ut?</div>
-           </div>
+            <div class="Vision-Mission">
+                <h4 class="heading-1">Vision Statement</h4>
+                <div id="vision-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quae eaque tempore
+                    perferendis non enim facere consequuntur numquam saepe labore, consequatur ex voluptatum accusamus
+                    ab unde. Rem ipsum aut ut?</div>
+            </div>
         </section>
         <section class="section-2">
-                 <h4 class="heading-2">Upcoming Events</h4>
-                 <div class="eventBody">
-                 <svg  class="Calender" viewBox="0 0 38 40.5" >
+            <h4 class="heading-2">Upcoming Events</h4>
+            <div class="eventBody">
+                <svg class="Calender" viewBox="0 0 38 40.5">
                     <defs>
-                        <style>.cls-1{fill:#cfd8dc;}.cls-2{fill:#c3f;}.cls-3{fill:#5146bc;}.cls-4{fill:#b0bec5;}.cls-5{fill:#a697b7;}
+                        <style>
+                            .cls-1 {
+                                fill: #cfd8dc;
+                            }
 
+                            .cls-2 {
+                                fill: #c3f;
+                            }
+
+                            .cls-3 {
+                                fill: #5146bc;
+                            }
+
+                            .cls-4 {
+                                fill: #b0bec5;
+                            }
+
+                            .cls-5 {
+                                fill: #a697b7;
+                            }
                         </style>
                     </defs>
-                    <g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,36.5v-24H38v24a4,4,0,0,1-4,4H4A4,4,0,0,1,0,36.5Z"/>
-                        <path class="cls-2" d="M38,8.5v6H0v-6a4,4,0,0,1,4-4H34A4,4,0,0,1,38,8.5Z"/>
-                        <circle class="cls-3" cx="32.68" cy="8.1" r="3"/><circle class="cls-3" cx="5.36" cy="8.1" r="3"/><path class="cls-4" d="M32.68,0a2,2,0,0,0-2,2V7a2,2,0,0,0,4,0V2A2,2,0,0,0,32.68,0Z"/>
-                        <path class="cls-4" d="M5.32,0a2,2,0,0,0-2,2V7a2,2,0,0,0,4,0V2A2,2,0,0,0,5.32,0Z"/><rect class="cls-5" x="7.82" y="24.2" width="22.36" height="12.6" rx="2.82"/><rect class="cls-5" x="10.44" y="16.53" width="17.1" height="5.64" rx="2.82"/></g></g>
-                    </svg>
-                </div>
-               <div class="eventContent">
+                    <g id="Layer_2" data-name="Layer 2">
+                        <g id="Layer_1-2" data-name="Layer 1">
+                            <path class="cls-1" d="M0,36.5v-24H38v24a4,4,0,0,1-4,4H4A4,4,0,0,1,0,36.5Z" />
+                            <path class="cls-2" d="M38,8.5v6H0v-6a4,4,0,0,1,4-4H34A4,4,0,0,1,38,8.5Z" />
+                            <circle class="cls-3" cx="32.68" cy="8.1" r="3" />
+                            <circle class="cls-3" cx="5.36" cy="8.1" r="3" />
+                            <path class="cls-4" d="M32.68,0a2,2,0,0,0-2,2V7a2,2,0,0,0,4,0V2A2,2,0,0,0,32.68,0Z" />
+                            <path class="cls-4" d="M5.32,0a2,2,0,0,0-2,2V7a2,2,0,0,0,4,0V2A2,2,0,0,0,5.32,0Z" />
+                            <rect class="cls-5" x="7.82" y="24.2" width="22.36" height="12.6" rx="2.82" />
+                            <rect class="cls-5" x="10.44" y="16.53" width="17.1" height="5.64" rx="2.82" />
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <div class="eventContent">
                 <div class="month">DEC</div>
                 <div class="time">9:00 AM WAT</div>
                 <div class="day">TUE</div>
                 <div class="date">16</div>
-               </div>
-                  <div class="someContent">End of the year empowerment and provision scheme aimed at helping the widows during festive period and catering for orphans</div>
-        
-                </section>
+            </div>
+            <div class="someContent">End of the year empowerment and provision scheme aimed at helping the widows during
+                festive period and catering for orphans</div>
+
+        </section>
 
         <section class="section-3">
             <div class="historyPane">
-            <h4>Our History</h4>
-            <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi rem explicabo ut minima. Modi, hic eveniet doloremque architecto officia sit nulla perspiciatis, quas id maiores sunt facere eligendi esse iusto.</div>
+                <h4>Our History</h4>
+                <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi rem explicabo ut minima. Modi,
+                    hic eveniet doloremque architecto officia sit nulla perspiciatis, quas id maiores sunt facere
+                    eligendi esse iusto.</div>
             </div>
         </section>
 
         <section class="section-4">
             <div class="testimonies">
-                <h4>Testimonies and Comments</h4>
+                <h4>Testimonies</h4>
                 <div class="testimoniesContainer">
                     <div class="testimony-1">
-                        <div class="testimony-head"> 
-                        <img src="./Assets/testimonyImage1.jpg" alt="image of the widow testifying"/>
-                        <span class="name">Mrs Kofree Adang </span>
-                    </div>
-                        <div class="someText">
-                            LadiMaji has been of tremendous help since the loss of my husband in 2011.
+                        <div class="testimony-head">
+                            <img src="./Assets/testimonyImage1.jpg" alt="image of the widow testifying" />
+                            <span class="testifiers-name">Mrs Kofree Adang </span>
+                        </div>
+                        <div class="testimony-text">
+                            LadiMaji has been of tremendous help since the loss of my husband in 2011. Words begin to fail me as i look back in retrospect on how this foundation have been my beneficiaries helping to take care of my basic needs and the needs of my children
                         </div>
                     </div>
                 </div>
-                <button>See More...</button>
+               <div class="slider-dot">
+                   <div class="dot dot1"></div>
+                   <div class="dot dot2"></div>
+                   <div class="dot dot3"></div>
+                   <div class="dot dot4"></div>
+               </div>
             </div>
         </section>
 
     </main>
 
     <footer>
-         <address>
-        <div class="contact-info">
-            <h4>Contact info</h4>
-        <div class="tel-1"><a href="tel:+234 809 8004 878">+234 809 8004 878</a></div>
-        <div class="tel-2"><a href="tel:+234 909 8104 878">+234 909 8104 878</a></div>
-        <div class="mail-to"><a href="mailto:confusion@food.net">ladimaji@org</a></div>
-        </div>
-        <div class="location">
-            <h4>Our Location</h4>
-           <div>po box 1423 off refinery junction agwan boro kaduna south kaduna state.</div> 
-           <div>po box 1423 off refinery junction agwan boro kaduna south Abuja FCT.</div>  
-        </div>
-     </address>
+        <address>
+            <div class="contact-info">
+                <div class="h4">Contact info</div>
+                <div class="tel-1"><a href="tel:+234 809 8004 878"><i class="fas fa-phone-alt"></i> +234 809 8004
+                        878</a></div>
+                <div class="tel-2"><a href="tel:+234 909 8104 878"><i class="fas fa-phone-alt"></i> +234 909 8104
+                        878</a></div>
+                <div class="mail-to"><a href="mailto:praiseleye.pl@gmail.com"><i class="fab fa-mailchimp"></i>
+                        ladimaji@org</a></div>
+            </div>
+            <div class="location">
+                <div class="h4">Our Location</div>
+                <div><i class="fas fa-map-marker-alt"></i> P.O box 1423 off refinery junction agwan boro kaduna south
+                    kaduna state.</div>
+            </div>
+        </address>
         <div class="short-message">
-            <input type="text" placeholder="Give us a feedback">
+            <input type="text" placeholder="Give us a feedback" />
+            <button><i class="fas fa-paper-plane"></i></button>
         </div>
         <div class="social-icons">
-
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-whatsapp"></i>
+            <i class="fab fa-youtube"></i>
         </div>
         <div class="copyright">© Copyright 2021 LadiMaji Foundation</div>
     </footer>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
+
     <script src="./App.js"></script>
 </body>
+
 </html>
