fixed the nav bar in this branch

--- a/Home.html
+++ b/Home.html
@@ -16,26 +16,30 @@
         <div class="circle-2"> </div>
         <div class="circle-3"> </div>
     </div>
-    <header>
-        <div class="logo"></div>
-        <h3 class="Name">Ladi Maji Foundation</h3>
+    <header> 
+        <nav>
+      <div class="brand">
+        <span class="brand-logo"></span>
+        <div class="brand-name">Ladi Maji Foundation</div>
+    </div>
         <div class="burger">
             <i class="fas fa-hamburger burger-open"></i>
         </div>
+       
+            <ul class="nav-items">
+                <li class="nav-item active"> <a class="nav-link" href="#"><span><i class="fas fa-home"></i> Home</span></a>
+                </li>
+                <li class="nav-item"> <a class="nav-link" href="./Aboutus.html"><span><i class="fas fa-fingerprint"></i>
+                            About us</span></a></li>
+                <li class="nav-item"> <a class="nav-link" href="./Contactus.html"><span><i class="fas fa-headset"></i>
+                            Contact us</span></a></li>
+                <li class="nav-item"> <a class="nav-link" href="./Partner.html"><span><i class="fas fa-handshake"></i>
+                            Partner</span></a></li>
+            </ul>
+        </nav>
     </header>
 
-    <nav>
-        <ul>
-            <li class="nav-item active"> <a class="nav-link" href="#"><span><i class="fas fa-home"></i> Home</span></a>
-            </li>
-            <li class="nav-item"> <a class="nav-link" href="./Aboutus.html"><span><i class="fas fa-fingerprint"></i>
-                        About us</span></a></li>
-            <li class="nav-item"> <a class="nav-link" href="./Contactus.html"><span><i class="fas fa-headset"></i>
-                        Contact us</span></a></li>
-            <li class="nav-item"> <a class="nav-link" href="./Partner.html"><span><i class="fas fa-handshake"></i>
-                        Partner</span></a></li>
-        </ul>
-    </nav>
+   
 
     <section class="d-catch">
         <div class="landingSection">
