added my module bundler i.e webpack

--- a/src/Home.html
+++ b/src/Home.html
@@ -65,8 +65,8 @@
         </section>
         <section class="section-2">
             <h4 class="heading-2">Upcoming Events</h4>
-            <div class="prev"></div>
-              <div class="next"></div>
+            <div class="prev"><i class="fas fa-angle-left"></i>PREV</div>
+              <div class="next"><i class="fas fa-angle-right"></i>NEXT</div>
             <div class="eventBody">
 
                 <svg class="Calender" viewBox="0 0 38 40.5">
