created contents for all the nav so they work well

--- a/src/About.html
+++ b/src/About.html
@@ -1,46 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="./Styles/Landingpage.css">
+   <script src="https://kit.fontawesome.com/db547d565f.js" crossorigin="anonymous"></script>
     <title>About Us</title>
 </head>
+
 <body>
-    <div class="circle-theory">
-        <div class="circle-1"> </div>
-        <div class="circle-2"> </div>
-        <div class="circle-3"> </div>
-    </div>
-    <header> 
+    <header>
         <nav>
-      <div class="brand">
-        <span class="brand-logo"></span>
-        <div class="brand-name">Ladi Maji Foundation</div>
-    </div>
-        <div class="burger">
-            <i class="fas fa-hamburger burger-open"></i>
-        </div>
-       
+            <div class="brand">
+                <span class="brand-logo"></span>
+                <div class="brand-name">Ladi Maji Foundation</div>
+            </div>
+            <div class="burger">
+                <i class="fa-solid fa-burger burger-open"></i>
+            </div>
+
             <ul class="nav-items">
-                <li class="nav-item active" id="home"> <a class="nav-link" href="#"><span><i class="fas fa-home"></i> Home</span></a>
+                <li class="nav-item active" id="home"> <a class="nav-link" href="./Home.html"><span><i
+                                class="fas fa-home"></i> Home</span></a>
                 </li>
-                <li class="nav-item" id="about"> <a class="nav-link" href="./Aboutus.html"><span><i class="fas fa-fingerprint"></i>
+                <li class="nav-item" id="about"> <a class="nav-link" href="#"><span><i class="fas fa-fingerprint"></i>
                             About us</span></a></li>
-                <li class="nav-item" id="contact"> <a class="nav-link" href="./Contactus.html"><span><i class="fas fa-headset"></i>
+                <li class="nav-item" id="contact"> <a class="nav-link" href="./Contact.html"><span><i
+                                class="fas fa-headset"></i>
                             Contact us</span></a></li>
-                <li class="nav-item" id="partner"> <a class="nav-link" href="./Partner.html"><span><i class="fas fa-handshake"></i>
+                <li class="nav-item" id="partner"> <a class="nav-link" href="./Partner.html"><span><i
+                                class="fas fa-handshake"></i>
                             Partner</span></a></li>
             </ul>
         </nav>
     </header>
-<main>
-    <div class="vision-aboutus">
-<h1>Vision</h1>
-<div class="visText">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, quam voluptates ab ut, debitis eum explicabo officiis sunt sed tempora facere error distinctio ex earum molestias quod, odio suscipit alias?
-</div>
-</div>
-</main>
+
+    <main class="About">
+        <div class="vision-aboutus">
+            <h1>D'Vision</h1>
+            <div class="visionText">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, quam voluptates ab ut, debitis eum
+                explicabo officiis sunt sed tempora facere error distinctio ex earum molestias quod, odio suscipit
+                alias?
+            </div>
+        </div>
+
+        <div class="mission-aboutus">
+            <h1>D'Mission</h1>
+            <div class="missionText">
+                We look at utilizing the immense power of philanthropy & goodwill towards creating a pool of resources
+                that will be applied in bringing relief to the needy
+            </div>
+        </div>
+
+        <div class="coreValues">
+            <h1>Core Values</h1>
+            <div class="coreText">
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit</li>
+            </div>
+        </div>
+
+        <div class="Founder">
+            <h1>Founder</h1>
+            <div class="founderPane">
+                <img src="./Assets/Founder.jpg" alt="The founder LadiMaji Foundation" />
+                <div class="founderName"><strong>Mrs Mary Onoja</strong></div>
+                <div class="founderBio">Was born on the 19th of October 1985 to a family of 6 mainly an auto biography of myself
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, quam voluptates ab ut, debitis eum
+                    explicabo officiis sunt sed tempora facere error distinctio ex earum molestias quod, odio suscipit
+                    alias?
+                </div>
+            </div>
+        </div>
+
+        <div class="History">
+            <h1>History</h1>
+            <div class="historyText">
+              Ladi maji Foundation was launhed on the ... so so so venue and has been making tremendious progress by offering
+              relieves to the less advantaged. the dream which was been nursed finally came into reality although not devoid of its 
+              challenges. i was motivated by .....
+            </div>
+        </div>
+
+        <div class="LadiMaji Team">
+            <h1>Ladi Maji Team</h1>
+            <div class="Lmf-Team-Pane">
+                <div class="avatarAsset">
+                <img src="./Assets/Avatar 1.jpg" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 2.png" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 3.jpg" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 2.png" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 3.jpg" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 1.jpg" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 3.jpg" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 1.jpg" alt=" Sponsor Image">
+                <img src="./Assets/Avatar 2.png" alt=" Sponsor Image">
+            </div>
+            <div class="LMF-Team">
+               Ladi Maji being a structured organisation also benefits from a couple of other philantrophic organisations and individuals who have both
+               invested their time, money, energy and much more in ensuring the organisation is able to archieve its goals.
+            </div>
+           
+        </div>
+        </div> 
+        <div class="button">
+        <button>Volunteer</button>
+    </div>
+    </main>
+
+    <footer>
+
+        <div class="contact-info">
+            <div class="h4">Contact info</div>
+            <div class="contact-info-content">
+                <div id="phoneNum1" class="tel-1"><a href="tel:+234 809 8004 878"><i class="fas fa-phone-alt"></i> +234
+                        809 8004
+                        878</a></div>
+                <div id="phoneNum2" class="tel-2"><a href="tel:+234 909 8104 878"><i class="fas fa-phone-alt"></i> +234
+                        909 8104
+                        878</a></div>
+                <div id="lmfMail" class="mail-to"><a href="mailto:praiseleye.pl@gmail.com"><i
+                            class="fab fa-mailchimp"></i>
+                        ladimaji@org</a></div>
+
+            </div>
+        </div>
+        <div class="location">
+            <div class="h4">Our Location</div>
+            <div id="locationAddress" class="location-content"><a href="./Contact.html"><i
+                        class="fas fa-map-marker-alt"></i> P.O box 1423
+                    off refinery junction agwan boro kaduna south
+                    kaduna state.</a>
+                <div id="timeOpen"><span><i class="far fa-clock"></i> Mon 9am - 6pm</span></div>
+            </div>
+        </div>
+
+        <div class="short-message">
+            <div class="h4">Short Mesasge</div>
+            <input type="text" placeholder="Give us a feedback" />
+            <button id="submitFeedback"><i class="fas fa-paper-plane"></i></button>
+        </div>
+        <div class="Dev">
+            <div class="h4">Other Links</div>
+            <div class="dev-content">
+                <div> Admin Login</div>
+                <div>Patnerships</div>
+                <div>Developers info</div>
+                <div style="color:red">Report Bug!</div>
+            </div>
+        </div>
+        <div class="social-icons">
+            <div class="h4">Follow us</div>
+            <div class="socialIcon">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <!-- <i class="fab fa-twitter"></i> -->
+                <i class="fab fa-whatsapp"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+        <div class="copyright">© Copyright 2021 LadiMaji Foundation</div>
+    </footer>
+<script src="./About.js"></script>
 </body>
 </html>
