--- a/src/Home.html
+++ b/src/Home.html
@@ -23,17 +23,17 @@
                 <div class="brand-name">Ladi Maji Foundation</div>
             </div>
             <div class="burger">
-                <i class="fas fa-hamburger burger-open"></i>
+                <i class="fa-solid fa-burger burger-open"></i>
             </div>
 
             <ul class="nav-items">
                 <li class="nav-item active" id="home"> <a class="nav-link" href="#"><span><i class="fas fa-home"></i>
                             Home</span></a>
                 </li>
-                <li class="nav-item" id="about"> <a class="nav-link" href="./Aboutus.html"><span><i
+                <li class="nav-item" id="about"> <a class="nav-link" href="./About.html"><span><i
                                 class="fas fa-fingerprint"></i>
                             About us</span></a></li>
-                <li class="nav-item" id="contact"> <a class="nav-link" href="./Contactus.html"><span><i
+                <li class="nav-item" id="contact"> <a class="nav-link" href="./Contact.html"><span><i
                                 class="fas fa-headset"></i>
                             Contact us</span></a></li>
                 <li class="nav-item" id="partner"> <a class="nav-link" href="./Partner.html"><span><i
@@ -57,9 +57,20 @@
             <button class="Partner-Us">
                 <i class="fas fa-handshake"></i><span class="partner-text"> Partner</span>
             </button>
+        </div> 
+        <div class="partnerClick">  
+             <div class="closePartner"><i class="fa-solid fa-xmark"></i></div>
+            <div class="partnerLegend">Partner with LMF <i
+                class="fas fa-handshake"></i>
+            </div>  
+            <input type="text" name="Name" required placeholder="Firstname                Lastname"/>
+            <input type="email" name="email" required  placeholder="Your email address"/>
+            <input type="tel"  size="20" minlength="9" maxlength="14" name="number"  required  placeholder="Your contact number"/>
+            <button type="submit" class="submit4Partner"> Submit </button>
         </div>
     </section>
-    <main>
+ 
+    <main class="Home">
         <section class="section section-1">
             <div class="Vision-Mission">
                 <h4 class="heading-1">Vision Statement</h4>
@@ -170,32 +181,30 @@
         <div class="contact-info">
             <div class="h4">Contact info</div>
             <div class="contact-info-content">
-                <div id="phoneNum1" class="tel-1"><a href="tel:+234 809 8004 878"><i class="fas fa-phone-alt"></i> +234
+                <div id="phoneNum1"  class="tel-1" ><a href="tel:+234 809 8004 878"><i class="fa-solid fa-phone"></i> +234
                         809 8004
                         878</a></div>
-                <div id="phoneNum2" class="tel-2"><a href="tel:+234 909 8104 878"><i class="fas fa-phone-alt"></i> +234
+                <div id="phoneNum2" class="tel-2"><a href="tel:+234 909 8104 878"><i class="fa-solid fa-phone"></i> +234
                         909 8104
                         878</a></div>
-                <div id="lmfMail" class="mail-to"><a href="mailto:praiseleye.pl@gmail.com"><i
-                            class="fab fa-mailchimp"></i>
+                <div id="lmfMail" class="mail-to"><a href="mailto:praiseleye.pl@gmail.com"><i class="fa-brands fa-mailchimp"></i>
                         ladimaji@org</a></div>
 
             </div>
         </div>
         <div class="location">
             <div class="h4">Our Location</div>
-            <div id="locationAddress" class="location-content"><a href="./Contact.html"><i
-                        class="fas fa-map-marker-alt"></i> P.O box 1423
+            <div id="locationAddress" class="location-content"><a href="./Contact.html"><i class="fa-solid fa-compass fa-spin"></i> P.O box 1423
                     off refinery junction agwan boro kaduna south
                     kaduna state.</a>
-                <div id="timeOpen"><span><i class="far fa-clock"></i> Mon 9am - 6pm</span></div>
+                <div id="timeOpen"><span><i class="fa-solid fa-clock"></i> Mon 9am - 6pm</span></div>
             </div>
         </div>
 
         <div class="short-message">
             <div class="h4">Short Mesasge</div>
             <input type="text" placeholder="Give us a feedback" />
-            <button id="submitFeedback"><i class="fas fa-paper-plane"></i></button>
+            <button id="submitFeedback"><i class="fa-solid fa-paper-plane"></i></button>
         </div>
         <div class="Dev">
             <div class="h4">Other Links</div>
