--- a/template.html
+++ b/template.html
@@ -29,10 +29,10 @@
                 <li class="nav-item active" id="home"> <a class="nav-link" href="#"><span><i class="fas fa-home"></i>
                             Home</span></a>
                 </li>
-                <li class="nav-item" id="about"> <a class="nav-link" href="./Aboutus.html"><span><i
+                <li class="nav-item" id="about"> <a class="nav-link" href="./About.html"><span><i
                                 class="fas fa-fingerprint"></i>
                             About us</span></a></li>
-                <li class="nav-item" id="contact"> <a class="nav-link" href="./Contactus.html"><span><i
+                <li class="nav-item" id="contact"> <a class="nav-link" href="./Contact.html"><span><i
                                 class="fas fa-headset"></i>
                             Contact us</span></a></li>
                 <li class="nav-item" id="partner"> <a class="nav-link" href="./Partner.html"><span><i
