finally got the template and everything to work

--- a/templateAbout.html
+++ b/templateAbout.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./Styles/Landingpage.css">
    <script src="https://kit.fontawesome.com/db547d565f.js" crossorigin="anonymous"></script>
     <title>About Us</title>
 </head>
@@ -68,7 +67,7 @@
         <div class="Founder">
             <h1>Founder</h1>
             <div class="founderPane">
-                <img src="./Assets/Founder.jpg" alt="The founder LadiMaji Foundation" />
+                <img src="./src/Assets/Founder.jpg" alt="The founder LadiMaji Foundation" />
                 <div class="founderName"><strong>Mrs Mary Onoja</strong></div>
                 <div class="founderBio">Was born on the 19th of October 1985 to a family of 6 mainly an auto biography of myself
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, quam voluptates ab ut, debitis eum
@@ -91,15 +90,15 @@
             <h1>Ladi Maji Team</h1>
             <div class="Lmf-Team-Pane">
                 <div class="avatarAsset">
-                <img src="./Assets/Avatar 1.jpg" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 2.png" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 3.jpg" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 2.png" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 3.jpg" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 1.jpg" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 3.jpg" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 1.jpg" alt=" Sponsor Image">
-                <img src="./Assets/Avatar 2.png" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 1.jpg" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 2.png" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 3.jpg" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 2.png" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 3.jpg" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 1.jpg" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 3.jpg" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 1.jpg" alt=" Sponsor Image">
+                <img src="./src/Assets/Avatar 2.png" alt=" Sponsor Image">
             </div>
             <div class="LMF-Team">
                Ladi Maji being a structured organisation also benefits from a couple of other philantrophic organisations and individuals who have both
@@ -164,6 +163,5 @@
         </div>
         <div class="copyright">© Copyright 2021 LadiMaji Foundation</div>
     </footer>
-<script src="./About.js"></script>
 </body>
 </html>
