--- a/templateContact.html
+++ b/templateContact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/Landingpage.css">
     <script src="https://kit.fontawesome.com/db547d565f.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
@@ -39,8 +38,7 @@
 <main class="Contact">
 
 <div id="map">
-    <!-- <img src="./Assets/lmfmap.jpg" alt="position on map"  /> -->
- 
+
 </div>
 
     
@@ -122,6 +120,7 @@
         <div class="socialIcon">
             <i class="fab fa-facebook"></i>
             <i class="fab fa-instagram"></i>
+            <!-- <i class="fab fa-twitter"></i> -->
             <i class="fab fa-whatsapp"></i>
             <i class="fab fa-youtube"></i>
         </div>
@@ -129,9 +128,7 @@
     <div class="copyright">© Copyright 2021 LadiMaji Foundation</div>
 </footer>
 
-<script src="./Contact.js"></script>
-<script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCVXtjcQ16AEoBfcCBe3mg8ISJ6zCYz4s&callback=initMap&libraries=&v=weekly"
-      async defer></script>   
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCVXtjcQ16AEoBfcCBe3mg8ISJ6zCYz4s&callback=initMap&libraries=&v=weekly"
+      async></script>   
 </body>
 </html>
