--- a/templatePartner.html
+++ b/templatePartner.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/Landingpage.css">
     <script src="https://kit.fontawesome.com/db547d565f.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
@@ -36,7 +35,7 @@
     </header>
 
     <main class="Partner">
-        <img src="./Assets/TeamLmf.jpg" alt="Lmf Team">
+        <img src="./src/Assets/TeamLmf.jpg" alt="Lmf Team">
 
         <div>At Ladi Maji Foundation we are not only interested in your monetary commitments but will also appreciate your physical 
             involvment in our team. 
@@ -57,30 +56,33 @@
         <div class="contact-info">
             <div class="h4">Contact info</div>
             <div class="contact-info-content">
-                <div id="phoneNum1"  class="tel-1" ><a href="tel:+234 809 8004 878"><i class="fa-solid fa-phone"></i> +234
+                <div id="phoneNum1" class="tel-1"><a href="tel:+234 809 8004 878"><i class="fas fa-phone-alt"></i> +234
                         809 8004
                         878</a></div>
-                <div id="phoneNum2" class="tel-2"><a href="tel:+234 909 8104 878"><i class="fa-solid fa-phone"></i> +234
+                <div id="phoneNum2" class="tel-2"><a href="tel:+234 909 8104 878"><i class="fas fa-phone-alt"></i> +234
                         909 8104
                         878</a></div>
-                <div id="lmfMail" class="mail-to"><a href="mailto:praiseleye.pl@gmail.com"><i class="fa-brands fa-mailchimp"></i>
+                <div id="lmfMail" class="mail-to"><a href="mailto:praiseleye.pl@gmail.com"><i
+                            class="fab fa-mailchimp"></i>
                         ladimaji@org</a></div>
 
             </div>
         </div>
+        
         <div class="location">
             <div class="h4">Our Location</div>
-            <div id="locationAddress" class="location-content"><a href="./Contact.html"><i class="fa-solid fa-compass fa-spin"></i> P.O box 1423
+            <div id="locationAddress" class="location-content"><a href="./Contact.html"><i
+                        class="fas fa-map-marker-alt"></i> P.O box 1423
                     off refinery junction agwan boro kaduna south
                     kaduna state.</a>
-                <div id="timeOpen"><span><i class="fa-solid fa-clock"></i> Mon 9am - 6pm</span></div>
+                <div id="timeOpen"><span><i class="far fa-clock"></i> Mon 9am - 6pm</span></div>
             </div>
         </div>
 
         <div class="short-message">
             <div class="h4">Short Mesasge</div>
             <input type="text" placeholder="Give us a feedback" />
-            <button id="submitFeedback"><i class="fa-solid fa-paper-plane"></i></button>
+            <button id="submitFeedback"><i class="fas fa-paper-plane"></i></button>
         </div>
         <div class="Dev">
             <div class="h4">Other Links</div>
@@ -103,9 +105,6 @@
         </div>
         <div class="copyright">© Copyright 2021 LadiMaji Foundation</div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
-    <script src="./Partner.js"></script>
+
 </body>
 </html>
